objects/GFS_Case_Type__c.object
<CustomObject>
    <label>GFS Case Type</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Title</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GFS Case Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>GFS_Team__c</fullName>
        <label>GFS Team</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GFS_Team</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <inlineHelpText>Help Information to be displayed when the Picklist Value is selected on the Public Case Submission form.</inlineHelpText>
        <label>Help Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closed_SLA__c</fullName>
        <label>Closed SLA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GFS_SLA_Statuses</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GFS_Case_Type__c</fullName>
        <description>Picklist Value that this record corresponds to.</description>
        <label>GFS Case Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>GFS_Team__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>GFS_Case_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queue_Dev_Name__c</fullName>
        <label>Queue Dev. Name</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thank_You_Text__c</fullName>
        <inlineHelpText>This is the HTML Text that will be displayed to Customers after they successfully submit Web-Cases.</inlineHelpText>
        <label>Thank You Text</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reset_To_Status__c</fullName>
        <label>Reset To Status</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GFS_Case_Sub_Type__c</fullName>
        <label>GFS Case Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>GFS_Case_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>GFS_Case_Sub_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Response_SLA__c</fullName>
        <label>Initial Response SLA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GFS_SLA_Statuses</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_Dev_Name__c</fullName>
        <label>Record Type Dev. Name</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Approval_Chain_SLA__c</fullName>
        <label>In Approval Chain SLA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GFS_SLA_Statuses</valueSetName>
        </valueSet>
    </fields>
</CustomObject>